--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="refresh" content="1; url=https://help.svetek.com" />
-  <title>Docker Documentation</title>
+  <title>Svetek Documentation</title>
 </head>
 <body>
     <p>We have moved away from the <strong>docker.github.io</strong> domain. If you're not automatically redirected, please visit us at <a href="https://help.svetek.com">help.svetek.com</a>.</p>
