--- a/404.html
+++ b/404.html
@@ -6,10 +6,13 @@
   <title>Svetek Documentation</title>
 </head>
 <body>
-    <p>We have moved away from the <strong>docker.github.io</strong> domain. If you're not automatically redirected, please visit us at <a href="https://help.svetek.com">help.svetek.com</a>.</p>
+    <p>We have moved away from the <strong>help.svetek.com</strong> domain. If you're not automatically redirected, please visit us at <a href="https://help.svetek.com">help.svetek.com</a>.</p>
 
+<!--    <script>-->
+<!--        window.location.assign("https://help.svetek.com" + window.location.pathname);-->
+<!--    </script>-->
     <script>
-        window.location.assign("https://help.svetek.com" + window.location.pathname);
+      window.location.assign("https://help.svetek.com");
     </script>
 </body>
 </html>
